--- a/Skeleton/Api/Presentation/Coordination/actions/patch.php.twig
+++ b/Skeleton/Api/Presentation/Coordination/actions/patch.php.twig
@@ -1,4 +1,4 @@
-    public function patchAction() {
+    public function {{ action.action }}Action() {
         $adapter = new PatchCommandAdapter();
         $command = $adapter->createCommandFromRequest(
         new PatchRequest($this->request, $this->resolver)
