--- a/Skeleton/Api/Application/Command/Handler/Decorator/UpdateCommandHandlerDecorator.php.twig
+++ b/Skeleton/Api/Application/Command/Handler/Decorator/UpdateCommandHandlerDecorator.php.twig
@@ -2,6 +2,13 @@
 
 namespace {{ projectName }}\Application\{{ entityName }}\Command\Handler\Decorator;
 
+/**
+ * Class UpdateCommandHandlerDecorator
+ *
+ * @category   {{ projectName }}
+ * @package    Application
+ * @subpackage Command
+ */
 class UpdateCommandHandlerDecorator extends NewCommandHandlerDecorator
 {
 }
