--- a/Skeleton/Api/Application/Command/Handler/PatchCommandHandler.php.twig
+++ b/Skeleton/Api/Application/Command/Handler/PatchCommandHandler.php.twig
@@ -8,7 +8,7 @@ use Sfynx\DddBundle\Layer\Domain\Workflow\Generalisation\WorkflowHandlerInterfac
 use Sfynx\DddBundle\Layer\Infrastructure\Exception\WorkflowException;
 
 /**
- * Class UpdateCommandHandler.
+ * Class PatchCommandHandler.
  *
  * @category   {{ projectName }}
  * @package    Application
@@ -30,17 +30,18 @@ class PatchCommandHandler implements CommandHandlerInterface
     }
 
     /**
-    * @param CommandInterface $command
-    *
-    * @return object $entity
-    */
+     * @param CommandInterface $command
+     *
+     * @throws WorkflowException
+     * @return \{{ projectName }}\Domain\Entity\{{ entityName }} $entity
+     */
     public function process(CommandInterface $command)
     {
         $this->workflowHandler->process($command);
 
         $entity = !empty($this->workflowHandler->data->entity) ? end($this->workflowHandler->data->entity) : null;
         if (null === $entity) {
-            throw new WorkflowException('Entity has not been created');
+            throw new WorkflowException('Entity has not been patched.');
         }
 
         return $entity;
