--- a/Skeleton/Api/Presentation/Coordination/actions/searchBy.php.twig
+++ b/Skeleton/Api/Presentation/Coordination/actions/searchBy.php.twig
@@ -1,10 +1,10 @@
-
+    /**
+     * @return Response
+     */
     public function {{ action.action }}Action()
     {
-        $adapter = new searchByQueryAdapter();
-        $query = $adapter->createQueryFromRequest(
-            new SearchByRequest($this->request, $this->resolver)
-        );
+        $adapter = new SearchByQueryAdapter();
+        $query = $adapter->createQueryFromRequest(new SearchByRequest($this->request, $this->resolver));
 
         $entities = $this->searchByQueryHandler->process($query);
 
