--- a/Skeleton/Api/Presentation/Request/UpdateRequest.php.twig
+++ b/Skeleton/Api/Presentation/Request/UpdateRequest.php.twig
@@ -25,12 +25,15 @@ class UpdateRequest extends AbstractRequest implements CommandRequestInterface
 
     protected $allowedTypes = [
 {% for field in entityFields %}
-        '{{ field.name }}'=>['{% if field.type!="id" %}{% if field.type=="number" %}integer{% elseif field.type=="valueObject" %}array{% else %}{{ field.type }}{% endif %}{% else %}string{% endif %}'],
+        '{{ field.name }}' => ['{% if field.type!="id" %}{% if field.type=="number" %}integer{% elseif field.type=="valueObject" %}array{% else %}{{ field.type }}{% endif %}{% else %}string{% endif %}'],
 {% endfor %}
     ];
 
-
-
+    /**
+     * setOptions
+     *
+     * Set options from the request body and add the entity identifier.
+     */
     protected function setOptions()
     {
         $this->options = [];
@@ -41,7 +44,7 @@ class UpdateRequest extends AbstractRequest implements CommandRequestInterface
 
         //get url's params
         $entityId = $this->request->get('entityId');
-        if ($entityId !== null) {
+        if (null !== $entityId) {
             $this->options['entityId'] = $entityId;
         }
     }
